# PolymorphicCanaries

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  Vagrantfile
Binary based implementation/dynamic linked proram/: InstrumentationCode.c
Binary based implementation/static linked program/: CMakeLists.txt  DynistInstrumentationCode.cpp
Binary_based_implementation/: IsDynamicProg.py  self.c
Binary_based_implementation/dynamic linked proram/: Makefile  stack_chk_fail.c
Compiler based Implementation/: CMakeLists.txt  README.MD
Compiler based Implementation/P-SSP/: ReadMe.md
Compiler based Implementation/P-SSP-NT/: CMakeLists.txt  ReadMe.md
Compiler_based_Implementation/: README.MD
Compiler_based_Implementation/P-SSP/: CMakeLists.txt
Compiler_based_Implementation/P-SSP-LV/: readme.md
Compiler_based_Implementation/P-SSP-OWF/: readme.md
Evalution/: ReadMe.MD  SPEC_CPU2006.md  other_benchmark.md
GCC_PLUGIN/: Makefile  PolymorphicCanaries.c  PolymorphicCanaries.cpp  PolymorphicCanaries.h  offsets.h
Runtime Environment/: LIBPolymorphicCanaries.cpp  LIBPolymorphicCanaries.h  Makefile  offsets.h
Runtime_Environment/Binary_Based_Version/: .LIBPolymorphicCanaries.h.swp  LIBPolymorphicCanaries.cpp  LIBPolymorphicCanaries.h  Makefile  offsets.h
Runtime_Environment/Compile_Based_Version/: .LIBPolymorphicCanaries.h.swp  LIBPolymorphicCanaries.cpp  LIBPolymorphicCanaries.h  offsets.h
Runtime_Environment/Compiler_Based_Version_For_LLVM/: LIBPolymorphicCanaries.cpp
testsets/: Makefile  READMD.MD  README.MD  demo  demo.c
(+11 files in other folders)
